PLANET-7665: Fix visual errors in the Search Results page (#2607)
- Keep the same spacing in the search form.
- Avoid overlapping the title with the navigation on tablet devices.

--- a/assets/src/scss/pages/search/_search.scss
+++ b/assets/src/scss/pages/search/_search.scss
@@ -33,15 +33,7 @@
 
 .without-search-result,
 .search-result {
-  margin-top: 48px;
-
-  @include small-and-up {
-    margin-top: 0;
-  }
-
-  @include large-and-up {
-    margin-top: 94px;
-  }
+  margin-top: 94px;
 
   @include x-large-and-up {
     margin-top: 120px;
